syntax = "proto3";


package chatPackage;

import "google/protobuf/timestamp.proto";

message CommonRequest
{
	int32 request_id = 1;
}

message Conversation
{
	int32 conversation_id = 1;
	int32 franchisee_id = 2;
	int32 franchisor_id = 3;
	string franchisee_name = 5;
	string franchisor_franchise_name = 6;
	string is_accepted = 4;
	string franchisor_name = 7;
	google.protobuf.Timestamp created_at = 8;

}

message CommonResponse
{
	string response = 1;
}

